--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <name>cloud-gateway-service</name>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
     </properties>
