--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,23 +6,27 @@ spring:
     gateway:
       routes:
         - id: userModule
-          uri: https://user-service-production-6fa9.up.railway.app/
-#          uri: "http://localhost:9001/"
+#          uri: https://user-service-production-6fa9.up.railway.app/
+          uri: "http://localhost:9001/"
           predicates:
             - Path=/users/**
         - id: filmModule
-          uri: https://film-service-production.up.railway.app/
+#          uri: https://film-service-production.up.railway.app/
+          uri: "http://localhost:9002/"
           predicates:
             - Path=/films/**
         - id: scheduleModule
-          uri: https://schedule-service-production-12cd.up.railway.app/
+#          uri: https://schedule-service-production-12cd.up.railway.app/
+          uri: "http://localhost:9003/"
           predicates:
             - Path=/schedules/**
         - id: seatModule
-          uri: https://seat-service-production-3b8e.up.railway.app/
+#          uri: https://seat-service-production-3b8e.up.railway.app/
+          uri: "http://localhost:9004/"
           predicates:
             - Path=/seats/**
         - id: invoiceModule
-          uri: https://invoice-service-production-6ffc.up.railway.app/
+#          uri: https://invoice-service-production-6ffc.up.railway.app/
+          uri: "http://localhost:9005/"
           predicates:
             - Path=/invoice/**
